--- a/index.html
+++ b/index.html
@@ -2,69 +2,78 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Vandalé Home</title>
+    <title>Swiper demo</title>
     <meta
-      content="width=device-width, initial-scale=1, maximum-scale=1"
       name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
     />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="./css/posts/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./font/all.min.css">
+    <link rel="stylesheet" href="./font/inter.css">
   </head>
   <body>
-  <div class="container">
-    <div class="header box">
-      <h1><u>Vandalé Art Blog</u></h1>
-      <ul class="list">
-        <li>
-          <a href="html/recent.html">blog</a>
-        </li>
-        <li>
-          <a href="#">about</a>
-        </li>
-        <li>
-          <a href="#">archive</a>
-        </li>
-      </ul>
-    </div>
-    <div class="content box"><h2>Most Recent Post</h2>
-      <div class="card1">
-        <div class="card1-img"></div>
-        <div class="card1-txt">
-          <span class="date">4 days ago</span>
-          <h3>Vandalé Deconstruct (2021)</h3>
-          <p>Discover story behind latest painting from post-vandalism series</p>
-          <a href="html/recent.html"><button class="button button1">Open</button></a>
-        </div>
+    <div class="container">
+      <div class="header box">
+        <h1><u>Mario Biro</u></h1>
+            <ul class="list">
+              <li>
+                <a href="#">home</a>
+              </li>
+              <li>
+                <a href="#">about</a>
+              </li>
+              <li>
+                <a href="#">archive</a>
+              </li>
+            </ul>
       </div>
-    </div>
-    <div class="side box">
-      <h4>Favourite picks</h4>  
-	    <div class="nested">
-        <div class="mini1">
-          <a href="html/posts/post1.html" class="mini1-img"></a>
-          <div class="mini1-txt">
-            <h5>"Object in Dark"</h5>  
-          </div>
+      <br>
+      <br>
+      <!-- Swiper -->
+      <div class="swiper mySwiper">
+        <h2><u>Latest Posts</u></h2>
+        <div class="swiper-wrapper">
+          <div class="swiper-slide"><a href="./html/posts/neural-damage.html"><img src="./img/neural1_1.PNG" alt="Abstract Art"></a><p>Neural Damage</p></div>
+          <div class="swiper-slide"><img src="./img/neural1_2.PNG" alt="Abstract Art"></div>
+          <div class="swiper-slide"><img src="./img/neural1_3.PNG" alt="Abstract Art"><p>sakl</p></div>
+          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">Slide 5</div>
+          <div class="swiper-slide">Slide 6</div>
+          <div class="swiper-slide">Slide 7</div>
+          <div class="swiper-slide">Slide 8</div>
+          <div class="swiper-slide">Slide 9</div>
         </div>
-        <div class="mini2">
-          <a href="html/posts/post2.html" class="mini2-img"></a>
-          <div class="mini2-txt">
-            <h5>"Study XXXX"</h5>  
-          </div>
-        </div>
-        <div class="mini3">
-          <a href="html/posts/post3.html" class="mini3-img"></a>
-          <div class="mini3-txt">
-            <h5>"Study XXX"</h5> 
-          </div>
-        </div>
-        <div class="mini4">
-          <a href="html/posts/post4.html" class="mini4-img"></a>
-          <div class="mini4-txt">
-            <h5>"Study XX"</h5>
-          </div>
-        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
       </div>
+
+      <!-- Swiper JS -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+      <!-- Initialize Swiper -->
+      <script>
+        var swiper = new Swiper(".mySwiper", {
+          slidesPerView: 1,
+          spaceBetween: 30,
+          loop: true,
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          },
+          navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+          },
+          autoplay: {
+          delay: 5000,
+          disableOnInteraction: false,
+          },
+        });
+        
+      </script>
     </div>
     <div class="footer box">
       <div class="social">
@@ -75,7 +84,7 @@
       </div>
       <ul class="list">
         <li>
-          <a href="html/recent.html">blog</a>
+          <a href="../../index.html">home</a>
         </li>
         <li>
           <a href="#">about</a>
@@ -88,17 +97,8 @@
         </li>
       </ul>
       <p class="copyright">
-        Mario Biro @ 2021
+        Mario Biro © 2022
       </p>
-      <div class="wrapper">
-        <input type="checkbox" id="click">
-        <label for="click" class="btn-1">Subscribe</label>
-        <div class="field">
-          <input type="text" placeholder="Email Address">
-          <label for="click" class="btn-2">Subscribe</label>
-        </div>
-      </div>
     </div>  
-  </div>
   </body>
 </html>
